--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
 
 
     <script>
-      //Your web app's Firebase configuration
-
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    </script>
+      // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCIJ4VZaNjkQuVuXIXmqV4fvzjotp3Vyzs",
+    authDomain: "car-race-a8b44.firebaseapp.com",
+    databaseURL: "https://car-race-a8b44-default-rtdb.firebaseio.com",
+    projectId: "car-race-a8b44",
+    storageBucket: "car-race-a8b44.appspot.com",
+    messagingSenderId: "1007123521021",
+    appId: "1:1007123521021:web:b7d3d68a4df8c53c584d94"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
     <script src="js/Player.js"></script>
     <script src="js/Form.js"></script>
